deployment-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-blue
  template:
    metadata:
      labels:
        app: web-blue
    spec:
      containers:
      - name: web
        image: fabricioveronez/web-page:blue
        resources: {}
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: svc-web-blue
spec:
  selector:
    app: web-blue
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-green
  template:
    metadata:
      labels:
        app: web-green
    spec:
      containers:
      - name: web
        image: fabricioveronez/web-page:green
        resources: {}
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: svc-web-green
spec:
  selector:
    app: web-green
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  ingressClassName: nginx
  rules:
  - host: blue.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-web-blue
            port:
              number: 80
  - host: green.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-web-green
            port:
              number: 80
